--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "plotly>=6.1.2",
     "pymupdf>=1.25.5",
     "pytesseract>=0.3.13",
+    "pymongo>=4.8.0",
     "python-doctr[torch]>=0.11.0",
     "python-docx>=1.1.2",
     "python-multipart>=0.0.20",
